Wed Jan  8 21:52:12 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: add AM_GLIB_GNU_GETTEXT, so gnome-autogen behaves.

Wed Jan  8 21:05:24 CET 2003  Jordi Mallach  <jordi@sindominio.net>

	* autogen.sh: use gnome-autogen.sh.
	* macros/*: removed. GNOME2 uses system wide macros.

Wed Jan  8 13:10:24 CET 2003  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c (data_button_add): g_strdup on text entry
	(text_entry_send_command): gchar -> const gchar
	(keybind_button_add_clicked_cb): g_strdup and null check added
	(stop_logging_connection): gchar -> const gchar + g_strdup

	* src/map.c (save_maps): gchar -> const gchar
	(file_sel_delete_event): ditto
	(load_automap_from_file): ditto

	* src/mudlist.c (mudlist_parse_hoststring): gchar -> const gchar
	(mudlist_button_connect_cb): ditto
	(mudlist_button_import_cb): ditto

	* src/prefs.c (prefs_entry_terminal_cb): added g_strdup
	(prefs_entry_mudlistfile_cb): ditto
	(prefs_entry_divide_cb): ditto

	* src/profiles.c (profilelist_new_profile): Added const + g_strdup
	(connections_find): gchar -> const gchar
	(connections_button_info_cancel_cb): Removed
	(window_profiles): Removed button_info_cancel
	(window_profile_edit): fixed stock images

Wed Jan  8 09:34:47 CET 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: No need for macros subdir

	* ROADMAP: Added a new entries

	* configure.ac: Moved to autoconf 2.5 and GNOME2

	* macros/*: GNOME2 changes.

	* po/*.po: Updated.

	* src/*.c: GNOME2 changes.
	
Tue Nov 12 11:32:48 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/profiles.c: apply dos2unix to remove CRLF strings. Have been
	there since day one!

Sun Nov 10 03:26:53 CET 2002  Jordi Mallach  <jordi@sindominio.net>

	* src/data.c, src/init.c, src/keybind.c src/prefs.c: fix a few
	American English labels (color, center, license) spotted by Abigail.
	Americans, if it hurts your eyes please submit an en_US.po.

Mon Nov  4 02:10:44 CET 2002  Jordi Mallach  <jordi@sindominio.net>
