@@ -12,6 +12,7 @@ AC_PREREQ(2.52)
 
 AM_PATH_GTK_2_0(2.0.0,,exit 1)
 
+AC_PROG_INTLTOOL([0.23])
 ALL_LINGUAS="es sv de ca fr"
 AM_GNU_GETTEXT_VERSION(0.11.5)
 AM_GLIB_GNU_GETTEXT
