@@ -1,15 +1,0 @@
-[Desktop Entry]
-Name=GNOME-Mud
-Name[ca]=GNOME-Mud
-Name[es]=GNOME-Mud
-Name[fr]=GNOME-Mud
-Name[sv]=GNOME-Mud
-Comment=The GNOME MUD Client
-Comment[ca]=El client de MUD de GNOME
-Comment[es]=El cliente de MUD de GNOME
-Comment[fr]=Le client MUD de GNOME
-Comment[sv]=GNOMEs MUD Klient
-Exec=gnome-mud
-Icon=gnome-gmush.png
-Terminal=0
-Type=Application
